force-app/main/default/objects/Additional_Service_Address__c/Additional_Service_Address__c.object-meta.xml
<CustomObject>
    <label>Additional Service Address</label>
    <nameField>
        <displayFormat>ASA-{000000}</displayFormat>
        <label>Additional Service Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Service Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>