force-app/main/default/objects/Additional_Service_Address__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Street__c &amp;", "&amp; City__c &amp; ", " &amp; State__c &amp;" "&amp;  Zip_Code__c</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>