force-app/main/default/objects/Additional_Service_Address__c/fields/Judgment_Party__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Judgment Party</label>
    <referenceTo>Liability_Judgement__c</referenceTo>
    <relationshipLabel>Additional Service Addresses</relationshipLabel>
    <relationshipName>Additional_Service_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>